<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".b.PartBActivity">

    <TextView
        android:id="@+id/th1PriorityBarLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/th1LabelText"
        app:layout_constraintBottom_toTopOf="@+id/stopTh1Btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/th1PriorityBarLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/th2LabelText"
        app:layout_constraintBottom_toTopOf="@+id/stopTh2Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/th1PriorityBarLabel2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="265dp"
        android:layout_height="133dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/startButtonText"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8sp"
        android:text="@string/dumbText"
        android:textColor="#5C6BC0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dumbText" />

    <Button
        android:id="@+id/startTh2Btn"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="150dp"
        android:onClick="onStartTh2BtnClick"
        android:text="@string/startTh2BtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startTh1Btn" />

    <Button
        android:id="@+id/stopTh2Btn"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onStopTh2BtnClick"
        android:text="@string/stopTh2BtnText"
        app:layout_constraintBottom_toTopOf="@+id/startTh2Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stopTh1Btn" />

    <Button
        android:id="@+id/startTh1Btn"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="150dp"
        android:onClick="onStartTh1BtnClick"
        android:text="@string/startTh1BtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startTh2Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stopTh1Btn"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onStopTh1BtnClick"
        android:text="@string/stopTh1BtnText"
        app:layout_constraintBottom_toTopOf="@+id/startTh1Btn"
        app:layout_constraintEnd_toStartOf="@+id/stopTh2Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>